# nwau_NCP

./: .env.example  .gitignore  README.md  function_app.py  host.json  local.settings.json.example  pyproject.toml  requirements.txt
nep_mcp/: __init__.py  __main__.py  adjustments.py  auth.py  branding.py  branding_html.py  branding_png.py  config.py  loader.py  server.py  store.py
nep_mcp/oauth/: __init__.py  microsoft.py  provider.py  routes.py  state.py
nep_mcp/pricing/: __init__.py  acute.py  aecc.py  mh_admitted.py  mh_community.py  nonadmitted.py  subacute.py  udg.py
price_weights/: nep_2025_26_price_weights.xlsx
tests/: test_pricing.py
