[project]
name = "nep-mcp"
version = "0.1.0"
description = "MCP server exposing IHPA NEP 2025-26 hospital funding metrics."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "openpyxl>=3.1.5",
    "starlette>=0.40.0",
    "PyJWT>=2.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
azure = ["azure-functions>=1.21.0"]
dev = ["pytest>=8"]

[project.scripts]
nep-mcp = "nep_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nep_mcp", "nep_mcp.pricing", "nep_mcp.oauth"]

[tool.setuptools.package-data]
nep_mcp = ["assets/*"]
